# Stock-Research-Workflow-

./: .gitignore  README.md  crew.py  main.py  pyproject.toml  requirements.txt
agents/: analyst_agent.py  fundamental_agent.py  news_agent.py  report_writer_agent.py  risk_agent.py  technical_agent.py
reports/: AAPL_report.md  AAPL_report_2026-07-18.md
stock_researcher_workflow/: cli.py  console_ui.py  crew.py  main.py
stock_researcher_workflow/agents/: analyst_agent.py  fundamental_agent.py  news_agent.py  report_writer_agent.py  risk_agent.py  technical_agent.py  trader_agent.py
stock_researcher_workflow/reports/: JPM_report.md  MSFT_report.md  NVDA_report.md  TSLA_report.md
stock_researcher_workflow/tasks/: analyse_task.py  fundamental_task.py  news_task.py  report_task.py  risk_task.py  technical_task.py  trade_task.py
stock_researcher_workflow/tools/: candlestick_plot_tool.py  fundamental_research_tools.py  news_research_tools.py  report_tools.py  stock_risk_tools.py  technical_research_tools.py
tasks/: fundamental_task.py  news_task.py  report_task.py  risk_task.py  technical_task.py  trade_task.py
tools/: news_research_tools.py  stock_research_tools.py
