[project]
name = "stock-researcher-workflow"
version = "0.1.0"
description = "Multi-agent CrewAI pipeline that researches a stock's fundamentals, technicals, sentiment, and risk, then compiles it into one investor report."
requires-python = ">=3.10"
dependencies = [
    "crewai[google-genai]==1.15.4",
    "crewai-tools==1.15.4",
    "python-dotenv==1.2.2",
    "yfinance>=0.2.70",
]

[project.scripts]
stock-researcher = "stock_researcher_workflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stock_researcher_workflow"]